...
        >
            <Tab.Screen
                name={NAVIGATION_KEY.HOME1}
                component={HomeContainer}
                options={{
                    title: "Home",
                    tabBarButtonTestID: "home-button",
                    tabBarIcon: (({ color }) => (
                        <Image
                            testID='tab-home-icon'
                            source={Images.home}
                            style={{
                                height: 25,
...
            />
            <Tab.Screen
                name={NAVIGATION_KEY.FAVORITES}
                component={FavoritesContainer}
                options={{
                    title: "Favorites",
                    tabBarButtonTestID: "fav-button",
                    tabBarIcon: (({ color, focused }) => (
                        <Image
                            testID='tab-fav-icon'
                            source={Images.like}
                            style={{
                                height: 25,
...
