...
        )
    }

    const emptyListView = () => {
        return (
            <View style={styles.emptyListContainer}>
                <Text testID="no-data" style={styles.noDataTxt}>
                    No Search Data
                </Text>
            </View>
        )
    }

...
                {
                    isLoading ? laodingView() : null
                }

                <View style={styles.flatListView}>
                    <FlatList
                        testID="searched-item-list"
                        scrollEnabled
                        data={isLoading || searchRecipe === "" ? [] : recipeData}
                        renderItem={renderSearchList}
                        numColumns={1}
                        contentContainerStyle={{
                            paddingBottom: 30
...
